--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -8,8 +8,8 @@
     <div id="btn_group">
       <button class="buttonSet" (click)="imageInput('modelInput')">모델 이미지 선택</button>
     </div>
+    <h3 style="font-weight: bold">기본 모델 선택</h3>
     <div id="btn_group">
-      기본 모델 선택
       <button class="buttonSet" (click)="modelDefault('남성')">남성</button>
       <button class="buttonSet" (click)="modelDefault('여성')">여성</button>
     </div>
@@ -57,7 +57,7 @@
         VITON-HD_Choi, S., Park, S., Lee, M., & Choo, J. (2021).
         VITON-HD: High-Resolution Virtual Try-On via Misalignment-Aware Normalization.
         In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).
-      
+
       </li>
       <li>
         Graphonomy_Gong, K., Gao, Y., Liang, X., Shen, X., Wang, M., & Lin, L. (2019). Graphonomy: Universal Human Parsing via Graph Transfer Learning. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR)
@@ -66,9 +66,9 @@
       <li>OpenPose_Cao, Z., Martinez, G.H., Simon, T., Wei, S., & Sheikh, Y.A. (2019). OpenPose: Realtime Multi-Person 2D Pose Estimation using Part Affinity Fields. IEEE Transactions on Pattern Analysis and Machine Intelligence.</li>
 
       <li>OpenPose_Simon, T., Joo, H., Matthews, I., & Sheikh, Y. (2017). Hand Keypoint Detection in Single Images using Multiview Bootstrapping. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).</li>
-    
+
       <li>OpenPose_Cao, Z., Simon, T., Wei, S., & Sheikh, Y. (2017). Realtime Multi-Person 2D Pose Estimation using Part Affinity Fields. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).</li>
-    
+
       <li>OpenPose_Wei, S., Ramakrishna, V., Kanade, T., & Sheikh, Y. (2016). Convolutional pose machines. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).</li>
 
     </ul>
