--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -1,6 +1,7 @@
 
 /*메뉴 author 태그 스타일 지정, 최초: 화이트, 클릭: 회색*/
 .app{
+  background-color: #eeeeee !important;
   display: flex;
   position: relative;
   flex-wrap: wrap;
@@ -99,23 +100,24 @@ a{
 
 
 .BottomNavIcon{
-  left: 0;
-  top:0;
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
 }
 .iconDiv{
-  position:relative;
-  padding-bottom: 70%;
-  height: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+
+  
 }
 
 .imgContainer{
 
-  position:absolute;
+  position:relative;
   width: 50%;
-  height: 70%;
+  height: 100%;
 }
 .BottomNavText{
   color: black;
